[gd_scene load_steps=11 format=3 uid="uid://cpsnau6j1s8jg"]

[ext_resource type="FontFile" uid="uid://birn6e5nqa478" path="res://Player/GUI/fonts/m5x7.ttf" id="1_cc0oe"]
[ext_resource type="Script" path="res://Scenes/file_select.gd" id="1_fw3ir"]
[ext_resource type="Script" path="res://Scenes/slot_labels.gd" id="3_b1ped"]
[ext_resource type="Script" path="res://Scenes/FileSelectButton.gd" id="3_i0i2f"]

[sub_resource type="Gradient" id="Gradient_epe5x"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.185348, 0.250046, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_43s7q"]
gradient = SubResource("Gradient_epe5x")
fill_from = Vector2(1, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_18h1y"]
texture = SubResource("GradientTexture2D_43s7q")
texture_margin_left = 2.0
texture_margin_top = 2.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iknox"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bu3wd"]
bg_color = Color(0.108686, 0.309522, 0.34288, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(9.62615e-08, 0.454086, 0.506172, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="ButtonGroup" id="ButtonGroup_j4l1q"]

[node name="FileSelect" type="CanvasLayer"]
script = ExtResource("1_fw3ir")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -13.5
offset_right = 62.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cc0oe")
text = "- SELECT GAME SLOT -"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Control/VBoxContainer"]
custom_minimum_size = Vector2(200, 125)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_18h1y")

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Button1" type="Button" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.607075, 0.28127, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_iknox")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bu3wd")
toggle_mode = true
button_group = SubResource("ButtonGroup_j4l1q")
script = ExtResource("3_i0i2f")
slot_id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="SlotLabel" type="Label" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_cc0oe")
theme_override_font_sizes/font_size = 0
text = " SLOT 1"
script = ExtResource("3_b1ped")

[node name="NameLabel" type="Label" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_cc0oe")
theme_override_font_sizes/font_size = 0
text = "ABCDEFGH"
script = ExtResource("3_b1ped")

[node name="TimeLabel" type="Label" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_cc0oe")
theme_override_font_sizes/font_size = 0
text = "00:24:15"
script = ExtResource("3_b1ped")

[node name="Button2" type="Button" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.607075, 0.28127, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_iknox")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bu3wd")
toggle_mode = true
button_group = SubResource("ButtonGroup_j4l1q")
script = ExtResource("3_i0i2f")
slot_id = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotLabel" type="Label" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_cc0oe")
theme_override_font_sizes/font_size = 0
text = " SLOT 2"
script = ExtResource("3_b1ped")

[node name="NameLabel" type="Label" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_cc0oe")
text = "Empty"
script = ExtResource("3_b1ped")

[node name="TimeLabel" type="Label" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_cc0oe")
theme_override_font_sizes/font_size = 0
text = "00:00:00"
script = ExtResource("3_b1ped")

[node name="Button3" type="Button" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.607075, 0.28127, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_iknox")
theme_override_styles/pressed = SubResource("StyleBoxFlat_bu3wd")
toggle_mode = true
button_group = SubResource("ButtonGroup_j4l1q")
script = ExtResource("3_i0i2f")
slot_id = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -6.5
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2

[node name="SlotLabel" type="Label" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("1_cc0oe")
theme_override_font_sizes/font_size = 0
text = " SLOT 3"
script = ExtResource("3_b1ped")

[node name="NameLabel" type="Label" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_cc0oe")
text = "Empty"
horizontal_alignment = 3
script = ExtResource("3_b1ped")

[node name="TimeLabel" type="Label" parent="Control/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/Button3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("1_cc0oe")
theme_override_font_sizes/font_size = 0
text = "00:00:00"
horizontal_alignment = 3
script = ExtResource("3_b1ped")

[node name="ButtonContinue" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cc0oe")
disabled = true
text = "Continue Game"

[node name="ButtonStart" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cc0oe")
disabled = true
text = "Start New Game"

[node name="ButtonDelete" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cc0oe")
disabled = true
text = "Delete Save Slot Data"
